syntax = "proto3";

package friend_service;

// ==== 基础引用 ====

message FriendRef {
  int64 user_id = 1;
}

// ==== 关系操作 ====

message AddFriendReq {
  int64 user_id  = 1;
  int64 friend_id = 2;
  // 新增：user_id 对 friend_id 的别名（优先于 alias）
  optional string alias_for_user = 4;
  // 新增：friend_id 对 user_id 的别名（即反向别名）
  optional string alias_for_friend = 5;
}

message AddFriendResp {
  // true 表示新增，false 可能表示已存在
  bool added = 1;
}

message RemoveFriendReq {
  int64 user_id  = 1;
  int64 friend_id = 2;
}

message RemoveFriendResp {
  bool removed = 1;
}

message IsFriendReq {
  int64 user_id  = 1;
  int64 friend_id = 2;
}

message IsFriendResp {
  bool is_friend = 1;
}

// ==== 仅返回 ID 的老接口（保持兼容）====

message GetFriendsReq {
  int64 user_id = 1;
}

message GetFriendsResp {
  repeated int64 friend_ids = 1;
}

message GetFriendsPageReq {
  int64 user_id = 1;
  uint64 page = 2;
  uint64 page_size = 3;
}

message GetFriendsPageResp {
  repeated int64 friend_ids = 1;
}

// ==== 带别名的“详细”结构与新接口 ====

message FriendEntry {
  int64 friend_id = 1;
  // 别名，未设置则为空字符串；也可结合 presence 判断（见下）。
  //
  // 可选的时间戳/扩展字段，按需启用（预留）
  // int64 created_at = 10;
  // int64 updated_at = 11;
  optional string alias = 2;
}

message GetFriendsDetailedReq {
  int64 user_id = 1;
}

message GetFriendsDetailedResp {
  repeated FriendEntry friends = 1;
}

message GetFriendsPageDetailedReq {
  int64 user_id = 1;
  uint64 page = 2;
  uint64 page_size = 3;
}

message GetFriendsPageDetailedResp {
  repeated FriendEntry friends = 1;
}

// ==== 单独更新/设置别名 ====

message UpdateFriendAliasReq {
  int64 user_id = 1;
  int64 friend_id = 2;
  // 将别名更新为此值；传空字符串可视为清除别名
  optional string alias = 3;
}

message UpdateFriendAliasResp {
  bool updated = 1;
}

message ClearFriendsReq {
  int64 user_id = 1;
}

message ClearFriendsResp {
}

// ==== gRPC 服务定义 ====

service FriendService {
  rpc AddFriend               (AddFriendReq)               returns (AddFriendResp);
  rpc RemoveFriend            (RemoveFriendReq)            returns (RemoveFriendResp);
  rpc IsFriend                (IsFriendReq)                returns (IsFriendResp);

  // 兼容旧有只返 ID 的接口
  rpc GetFriends              (GetFriendsReq)              returns (GetFriendsResp);
  rpc GetFriendsPage          (GetFriendsPageReq)          returns (GetFriendsPageResp);

  // 新增：带别名的查询
  rpc GetFriendsDetailed      (GetFriendsDetailedReq)      returns (GetFriendsDetailedResp);
  rpc GetFriendsPageDetailed  (GetFriendsPageDetailedReq)  returns (GetFriendsPageDetailedResp);

  // 新增：更新别名与清空
  rpc UpdateFriendAlias       (UpdateFriendAliasReq)       returns (UpdateFriendAliasResp);
  rpc ClearFriends            (ClearFriendsReq)            returns (ClearFriendsResp);
}
